# fias-public-api

./: .gitignore  README.md  nestfile  pyproject.toml  pytest.ini
.github/workflows/: bump-version.yml  publish.yml
examples/: 01_basic_usage.py  02_address_types.py  03_async_usage.py  04_retry_decorator.py  05_address_info_methods.py  06_search_methods.py  07_location_methods.py  08_error_handling.py  README.md  basic_usage.py
fias_public_api/: __init__.py  constants.py  fias_async.py  fias_sync.py
tests/: __init__.py  test_async.py  test_constants.py  test_fias_async.py  test_fias_sync.py  test_sync.py
