[project]
name = "fias-public-api"
version = "1.0.2"
description = "Python client for FIAS Public API - Russian address database"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "quonaro", email = "quonaro@mail.ru" }]
keywords = ["fias", "russia", "address", "api", "nalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = ["httpx>=0.28.1", "requests>=2.32.5"]

[project.urls]
Homepage = "https://github.com/quonaro/fias-public-api"
Repository = "https://github.com/quonaro/fias-public-api"
Documentation = "https://github.com/quonaro/fias-public-api#readme"
Issues = "https://github.com/quonaro/fias-public-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fias_public_api"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest", "ruff", "pytest-asyncio"]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options - более понятный вывод как в Python интерпретаторе
addopts = [
    "-vv",                    # Verbose output - показывает каждый тест
    "--tb=short",             # Short traceback format (как в Python)
    "--showlocals",            # Показывать локальные переменные при ошибках
    "--strict-markers",        # Строгая проверка маркеров
    "--color=yes",            # Цветной вывод
    "--durations=10",         # Показывать 10 самых медленных тестов
]

# Markers для категоризации тестов
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Логирование
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Минимальная версия pytest
minversion = "7.0"
